first paste from codepen
includes style of heading and image

--- a/index.html
+++ b/index.html
@@ -1,9 +1,45 @@
 <html>
+  
+<style>
+h1 {
+  color:aqua;
+    font-size: 60px;
+  text-align: center;
+    text-decoration: overline underline;
+  text-decoration-color: black;
+    text-decoration-style: wavy;
+       text-shadow: 3px 3px 7px black;
+}
 
+body{
+  background-color: antiquewhite;
+}
 
-hello hi whats going on yo 
+img {
+  width:25%;
+    border-radius: 8px;
+  border: black 7px;
+}
 
+img:hover {
+  width: 50%;
+}
 
+</style>
+  <head>
+  </head>
+  <body>
+    <h1> Bradley's Website </h1>
+    
+    <center>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTexv8KKkSKwAJX-_6u06HTlpmaolbAKTlIU5f-7O6z0cr7_n0:https://i.etsystatic.com/11723531/r/il/3602e3/1043079293/il_570xN.1043079293_elql.jpg&s">
+    
+  
+  
+  
+
+  
+  </body>
 
 
 </html>
