--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
-  
+<head> 
+  <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="link to image">
+<title> ELMISA SOUP </title>
+  </head>
+
 <style>
 h1 {
   color:aqua;
