--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head> 
-  <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="link to image">
 <title> ELMISA SOUP </title>
   </head>
@@ -34,6 +34,13 @@ img:hover {
   <head>
   </head>
   <body>
+      <nav>
+      <center>
+        <li> <a href="index.html"> HOME </a></li>
+       <li> <a href="whatever.html"> APPS </a></li>
+       <li> <a href="nextpage.html"> OTHER </a></li>
+         <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/P2csB7v2ESyAP24o891gBjW8-97yZVNtAsHQQA3Jbnk/embed?nosource"></iframe>
+    </nav>
     <h1> Bradley's Website </h1>
     
     <center>
