--- a/secondpage.html
+++ b/secondpage.html
@@ -1,5 +1,19 @@
 <html>
+  <head> 
+ <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="link to image">
+<title> ELMISA SOUP </title>
+  </head>
 
+  <nav>
+      <center>
+        <li> <a href="index.html"> HOME </a></li>
+       <li> <a href="whatever.html"> APPS </a></li>
+       <li> <a href="nextpage.html"> OTHER </a></li>
+         <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/P2csB7v2ESyAP24o891gBjW8-97yZVNtAsHQQA3Jbnk/embed?nosource"></iframe>
+    </nav>
+
+<html>
 
 
 
