--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ img:hover {
     <nav>
       <center>
         <li> <a href="index.html"> HOME </a></li>
-       <li> <a href="whatever.html"> APPS </a></li>
+       <li> <a href="secondpage.html"> APPS </a></li>
        <li> <a href="nextpage.html"> OTHER </a></li>
     </nav>
       <br>
