--- a/secondpage.html
+++ b/secondpage.html
@@ -1,22 +1,65 @@
 <html>
-  <head> 
- <link rel="stylesheet" href="style.css">
-<link rel="icon" type="image/x-icon" href="link to image">
-<title> ELMISA SOUP </title>
-  </head>
-
-  <nav>
-      <center>
-        <li> <a href="index.html"> HOME </a></li>
-       <li> <a href="secondpage.html"> APPS </a></li>
-       <li> <a href="nextpage.html"> OTHER </a></li>
-         <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/P2csB7v2ESyAP24o891gBjW8-97yZVNtAsHQQA3Jbnk/embed?nosource"></iframe>
-    </nav>
-
-<html>
+ 
 
 
 
+
+
+
+  h1 {
+  color:navy;
+    font-size: 60px;
+  text-align: center;
+    text-decoration: overline underline;
+  text-decoration-color: black;
+    text-decoration-style: wavy;
+       text-shadow: 3px 3px 5px white;
+}
+
+
+body{
+  background-color: antiquewhite;
+}
+
+img {
+  width:25%;
+    border-radius: 8px;
+  border: black 7px;
+}
+
+img:hover {
+  width: 50%;
+}
+
+
+
+nav {
+  list-style-type: none;
+  position:fixed;
+  background-color: teal;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  padding: 8.5px;
+  font-size: 22px;
+    font-style: italic;
+}
+
+li {
+  display: inline;
+  padding: 80px;
+    color: white;
+      font-family: "Lucida Console", "Courier New", monospace;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color: gray;
+}
 
 
 
