--- a/secondpage.html
+++ b/secondpage.html
@@ -1,5 +1,12 @@
 <html>
 
+   <body>
+    <nav>
+      <center>
+        <li> <a href="index.html"> HOME </a></li>
+       <li> <a href="secondpage.html"> APPS </a></li>
+       <li> <a href="nextpage.html"> OTHER </a></li>
+
 
 nav {
   list-style-type: none;
