--- a/secondpage.html
+++ b/secondpage.html
@@ -1,44 +1,40 @@
-<html>
+         <html>
+<head> 
+ <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="link to image">
+<title> ELMISA SOUP </title>
+  </head>
 
+<style>
+h1 {
+  color:aqua;
+    font-size: 60px;
+  text-align: center;
+    text-decoration: overline underline;
+  text-decoration-color: black;
+    text-decoration-style: wavy;
+       text-shadow: 3px 3px 7px black;
+}
+
+body{
+  background-color: antiquewhite;
+}
+
+img {
+  width:25%;
+    border-radius: 8px;
+  border: black 7px;
+}
+
+img:hover {
+  width: 50%;
+}
+
+</style>
+
+ 
+ 
    <body>
-    <nav>
-      <center>
-        <li> <a href="index.html"> HOME </a></li>
-       <li> <a href="secondpage.html"> APPS </a></li>
-       <li> <a href="nextpage.html"> OTHER </a></li>
-
-
-nav {
-  list-style-type: none;
-  position:fixed;
-  background-color: teal;
-  width: 100vw;
-  top: 0;
-  left: 0;
-  padding: 8.5px;
-  font-size: 22px;
-    font-style: italic;
-}
-
-li {
-  display: inline;
-  padding: 80px;
-    color: white;
-      font-family: "Lucida Console", "Courier New", monospace;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-}
-
-a:hover {
-  color: gray;
-}
-
-
-
-
 
 
 
