--- a/secondpage.html
+++ b/secondpage.html
@@ -40,5 +40,64 @@ img:hover {
 
 
 
+            h1 {
+  color:navy;
+    font-size: 60px;
+  text-align: center;
+    text-decoration: overline underline;
+  text-decoration-color: black;
+    text-decoration-style: wavy;
+       text-shadow: 3px 3px 5px white;
+}
+
+
+body{
+  background-color: antiquewhite;
+}
+
+img {
+  width:25%;
+    border-radius: 8px;
+  border: black 7px;
+}
+
+img:hover {
+  width: 50%;
+}
+
+
+
+nav {
+  list-style-type: none;
+  position:fixed;
+  background-color: teal;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  padding: 8.5px;
+  font-size: 22px;
+    font-style: italic;
+}
+
+li {
+  display: inline;
+  padding: 80px;
+    color: white;
+      font-family: "Lucida Console", "Courier New", monospace;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color: gray;
+}
+
+
+
+
+
   
 </html>
