--- a/secondpage.html
+++ b/secondpage.html
@@ -42,8 +42,12 @@ img:hover {
        <li> <a href="nextpage.html"> OTHER </a></li>
     </nav>
       <br>
+      <br>
+      <center>
+           <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/kQqC6-N9t4vL8CV97eR2jl-yFstFqO4vO0JbRsqTP9O/embed?nosource"></iframe>
+      </center>
    
-     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/kQqC6-N9t4vL8CV97eR2jl-yFstFqO4vO0JbRsqTP9O/embed?nosource"></iframe>
+ 
    
     <center>
     
