--- a/secondpage.html
+++ b/secondpage.html
@@ -48,6 +48,12 @@ img:hover {
        <br>
        <br>
           <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/P2csB7v2ESyAP24o891gBjW8-97yZVNtAsHQQA3Jbnk/embed?nosource"></iframe>
+       <br>
+       <br>
+       <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/iTgaxyKlMBKp61OguFu0p9zZUKJhb8Q-VXeRlsWLcQH/embed?nosource"></iframe>
+       <br>
+       <br>
+       <iframe width="440" height="757" style="border: 0px;" src="https://studio.code.org/projects/gamelab/zlpoeEgANoDSkrK9FLpOSMF-EThkk6ZdMaUeuQN92hr/embed?nosource"></iframe>
       </center>
    
  
