--- a/thirdpage.html
+++ b/thirdpage.html
@@ -39,7 +39,7 @@ img:hover {
       <center>
         <li> <a href="index.html"> HOME </a></li>
        <li> <a href="secondpage.html"> APPS </a></li>
-       <li> <a href="nextpage.html"> OTHER </a></li>
+       <li> <a href="thridpage.html"> OTHER </a></li>
     </nav>
       <br>
       <br>
