--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head> 
  <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="link to image">
-<title> ELMISA SOUP </title>
+<title> Bradley's Website </title>
   </head>
 
 <style>
