--- a/secondpage.html
+++ b/secondpage.html
@@ -1,8 +1,8 @@
 <html>
 <head> 
  <link rel="stylesheet" href="style.css">
-<link rel="icon" type="image/x-icon" href="link to image">
-<title> ELMISA SOUP </title>
+<link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJ3iMsWv1-DwGP5ox428antALcycg28n8LEdbH_AJOMAERyBU:https://cdn.simplystamps.com/media/catalog/product/7/9/7900-cool-sunglasses-emoji-stamp-hcb.png&s">
+<title> Bradley's Website </title>
   </head>
 
 <style>
